--- a/index.html
+++ b/index.html
@@ -74,17 +74,17 @@
             padding-bottom: 15px;
             margin-bottom: 25px;
             
-            /* NEU: Layout-Schutz für das Logo */
-            margin-top: 25px;    /* Schiebt Überschrift generell tiefer */
-            padding-right: 170px; /* Zwingt langen Text zum Umbruch VOR dem Logo */
+            /* Layout-Schutz für das Logo */
+            margin-top: 25px;    
+            padding-right: 170px; 
             position: relative;
         }
 
-        /* Mobile Anpassung für den Header */
+        /* Mobile Anpassung */
         @media (max-width: 600px) {
             .slide-header {
-                padding-right: 0; /* Auf Handy volle Breite nutzen */
-                margin-top: 45px; /* Dafür mehr Abstand nach oben, damit Logo frei steht */
+                padding-right: 0; 
+                margin-top: 45px; 
             }
         }
 
@@ -188,12 +188,12 @@
         /* DEKORATION (Logo) */
         .helios-branding {
             position: absolute;
-            top: 20px; /* Leicht angepasst */
+            top: 20px; 
             right: 20px;
             font-size: 18px;
             font-weight: bold;
             color: var(--helios-darkblue);
-            z-index: 10; /* Über allem */
+            z-index: 10; 
         }
         .helios-branding span {
             color: var(--helios-cyan);
@@ -280,7 +280,7 @@
             }
             .controls { display: none !important; }
             .grid-2 { grid-template-columns: 1fr 1fr !important; gap: 40px; }
-            .slide-header { padding-right: 0; margin-top: 0; } /* Reset für Druck */
+            .slide-header { padding-right: 0; margin-top: 0; }
         }
     </style>
 </head>
@@ -311,7 +311,7 @@
             <div class="accent"></div>
             <div class="meta-info">
                 <strong>Referent:</strong> Constantin Paul<br>
-                <strong>Fokus:</strong> Verbindung & Events<br>
+                <strong>Fokus:</strong> Verbindung & Effizienz<br>
                 <strong>Mission:</strong> Zusammenhalt stärken
             </div>
         </div>
@@ -402,15 +402,15 @@
             <div class="helios-branding">Helios<span>Gesundheit</span></div>
             <div class="slide-header">
                 <h1>2. Quality Break</h1>
-                <h2>Den Schicht-Lifestyle aufwerten</h2>
+                <h2>Ressourcen strategisch nutzen</h2>
             </div>
             <div class="grid-2">
                 <div>
-                    <h3>Service für Profis</h3>
-                    <p>Wer Schicht arbeitet, macht das freiwillig, braucht aber passgenaue Angebote.</p>
+                    <h3>Konzeptentwicklung</h3>
+                    <p>Wer Schicht arbeitet, braucht passgenaue Angebote – ohne Extrakosten, sondern durch smarte Planung.</p>
                     <ul>
-                        <li><strong>Energy Boost:</strong> Gesunde Snacks/Drinks zu Zeiten, wo die Kantine zu hat (Nachtschicht-Support).</li>
-                        <li><strong>Lounge-Konzept:</strong> Aufwertung der Pausenräume zu echten Rückzugsorten.</li>
+                        <li><strong>Versorgungs-Check:</strong> Wie können wir bestehende Budgets (Kantine) flexibler für den Nachtdienst einsetzen?</li>
+                        <li><strong>Prozess-Analyse:</strong> Wann brauchen Teams Energie? (Datenbasierte Planung).</li>
                     </ul>
                 </div>
                 <div>
@@ -424,11 +424,11 @@
                             <path d="M90 100 L 80 110 L 95 110 L 90 125 L 105 110 L 90 110 L 100 100 Z" fill="#009EB3" />
                         </svg>
                     </div>
-                    <h3>Der "Oase"-Gedanke</h3>
+                    <h3>Raum-Analyse</h3>
                     <div class="highlight-box">
-                        <strong>Quick Win:</strong>
+                        <strong>Nutzung vor Umbau</strong>
                     </div>
-                    <p>Den Arbeitsplatz verlassen können (mental und physisch), um kurz aufzutanken. Atmosphäre statt "Überlebenstraining".</p>
+                    <p>Prüfung der Pausenräume auf Funktionalität und Atmosphäre. Oft reichen kleine Anpassungen (Licht/Ordnung), um echte Rückzugsorte zu schaffen.</p>
                 </div>
             </div>
         </div>
@@ -442,7 +442,7 @@
             <div class="grid-2">
                 <div>
                     <h3>Proven Track Record</h3>
-                    <p>Meine Erfahrung im Veranstaltungsmanagement der Hotellerie & Golf-Branche ist der Motor für professionelle Abläufe.</p>
+                    <p>Meine Erfahrung im Veranstaltungsmanagement der Hotellerie & Golf-Branche garantiert professionelle Abläufe.</p>
                     
                     <h4>Erfahrungsschatz (Hotel/Golf):</h4>
                     <ul>
@@ -456,21 +456,17 @@
                 </div>
                 <div>
                     <h3>Ready for Helios</h3>
-                    <p>Ich übersetze diese Expertise direkt auf Ihren Bedarf:</p>
-                    <ul>
-                        <li><strong>Formate:</strong> Mitarbeiterfest, Tag der offenen Tür, Neujahrsempfang, Symposien, Patiententage.</li>
-                    </ul>
+                    <p>Ich übersetze diese Expertise direkt auf Ihren Bedarf (Mitarbeiterfest, Symposien, Patiententage).</p>
 
                     <h4>Mein Regional-Turbo:</h4>
-                    <p>Volle Verankerung in Bad Saarow bedeutet direkten Zugriff auf Ressourcen:</p>
+                    <p>Volle Verankerung in Bad Saarow bedeutet direkten Zugriff auf Ressourcen ohne Kaltakquise:</p>
                     <ul>
-                        <li><strong>Entertainment:</strong> Bands & Künstler ("Der kurze Draht").</li>
-                        <li><strong>Versorgung:</strong> Bewährte Catering-Partner.</li>
-                        <li><strong>Incentives:</strong> Sponsoren für Tombola/Preise (ohne Kaltakquise).</li>
+                        <li><strong>Exklusive Partner:</strong> Kooperationen (z.B. lokale Premium-Hotellerie & Zulieferer).</li>
+                        <li><strong>Incentives:</strong> Sponsoren für Tombola/Preise aus dem direkten Netzwerk.</li>
                     </ul>
                 </div>
             </div>
-            <div class="comic-img-container" style="position:absolute; bottom:20px; right:20px; opacity:0.6; transform: scale(0.7);">
+             <div class="comic-img-container" style="position:absolute; bottom:20px; right:20px; opacity:0.6; transform: scale(0.7);">
                 <svg class="comic-svg" viewBox="0 0 200 150">
                     <path d="M60 140 L 80 90 L 70 50 L 85 50 L 90 80" class="svg-line" />
                     <path d="M70 50 L 60 55" class="svg-line" /> 
@@ -520,16 +516,17 @@
         <div class="slide" id="slide-7">
             <div class="helios-branding">Helios<span>Gesundheit</span></div>
             <div class="slide-header">
-                <h1>Daten & Erfolgskontrolle</h1>
-                <h2>Teilnahme als Währung</h2>
+                <h1>Digitales Engagement & Effizienz</h1>
+                <h2>Datenkompetenz trifft Empathie</h2>
             </div>
             <div class="grid-2">
                 <div>
-                    <h3>Daten nutzen</h3>
-                    <p>Nutzung von <em>Helios Puls</em> nicht nur für Probleme, sondern als Stimmungsbarometer.</p>
+                    <h3>Tech-Stack & Hard Skills</h3>
+                    <p>Ich gestalte die digitale Welt von heute, statt nur Events zu planen. Mein USP gegen rein analoge Ansätze:</p>
                     <ul>
-                        <li><strong>Event-KPIs:</strong> Wie viele nehmen teil? Wie ist die Resonanz?</li>
-                        <li><strong>Stimmungsbild:</strong> Verändert sich das "Wir-Gefühl" in den Kommentaren?</li>
+                        <li><strong>Datenbanken (PostgreSQL/SQL):</strong> Tiefgehende Analyse von Mitarbeiterdaten statt oberflächlicher Excel-Listen.</li>
+                        <li><strong>KI-Automatisierung:</strong> Routine-Aufgaben (z.B. Einladungsmanagement, Feedback-Auswertung) automatisieren, um Zeit für den Menschen zu gewinnen.</li>
+                        <li><strong>Web-Dev:</strong> Verständnis für digitale Schnittstellen und moderne Tools.</li>
                     </ul>
                 </div>
                 <div>
@@ -544,11 +541,12 @@
                             <path d="M130 30 L 140 30 L 140 45" class="svg-line" stroke="#009EB3" fill="none" />
                         </svg>
                     </div>
-                    <h3>Feedback-Loop</h3>
+                    <h3>Helios Puls Turbo</h3>
                     <div class="highlight-box">
-                        <strong>"You said, we did"</strong>
+                        <strong>Der analytische Loop</strong>
                     </div>
-                    <p>Transparente Kommunikation: "Ihr wolltet ein Sommerfest – hier ist das Datum."</p>
+                    <p><em>Analyse → Maßnahme → Messung.</em></p>
+                    <p>Ich nutze Helios Puls nicht nur als Stimmungsbild, sondern werte gezielt abteilungsspezifisch aus, um operative Engpässe sichtbar zu machen und Lösungen datenbasiert zu validieren.</p>
                 </div>
             </div>
         </div>
@@ -570,7 +568,7 @@
                     <h3>Phase 2: Sichtbarkeit (Tag 31-60)</h3>
                     <ul>
                         <li>Erstes kleines "Connector-Event" (z.B. Coffee-Bike auf dem Campus).</li>
-                        <li>Planungsstart für Groß-Events (Neujahrsempfang/Tag der offenen Tür) unter Nutzung des regionalen Netzwerks.</li>
+                        <li>Planungsstart für Groß-Events (Neujahrsempfang) unter Nutzung des regionalen Netzwerks.</li>
                     </ul>
                 </div>
                 <div>
